clang/test/BSC/Negative/Method/Struct/struct_error_function_definition/struct_error_function_definition.cbs
// RUN: %clang_cc1 -verify %s

struct PollResult_int {};

struct struct PollResult_int PollResult_int::completed(struct PollResult_int *this, int result) { // expected-error {{declaration of anonymous struct must be a definition}}
} // expected-error {{expected identifier or '('}}
